# CODEPULSE

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/codepulse/: cli.py  complexity.py  coupling.py  decay.py  drift.py  git_analysis.py  knowledge.py  report.py  roles.py  server.py  snapshot.py
src/codepulse/static/: app.js  index.html
tests/: test_complexity.py  test_coupling.py  test_decay.py  test_drift.py  test_git_analysis.py  test_roles.py  test_snapshot.py
